# MuDiBot

./: .eslintrc.json  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  bot.js  build.rs  config.js  configs.json  data.db  database-backup-v000.db  package-lock.json  package.json  run.bat  run.sh  tarpaulin.toml
localization/: README.md  en-US.json  fr-FR.json  new-locale.bat  new-locale.sh
resources/en-US/: commands.ftl  errors.ftl  general.ftl
resources/fr/: commands.ftl  errors.ftl  general.ftl
scripts/: install.sh
src/: args.js  audio-player.js  bot.js  command-data.json  commands.js  commands.rs  config.rs  containers.rs  custom-cmd.js  data.json  default-channel.js  event_handler.rs  giphy-api.js  help.js  levels.js  lib.rs  localization.js  localization.json  localization.rs  logger.rs  main.rs  permission-group.js  storage.js  test_doubles.rs  test_utils.rs  util.js  util.rs  warning.js  warnings.js
src/commands/: fun.rs  general.rs  meta.rs  owner.rs  user.rs
src/commands/fun/: gif.rs  random.rs
src/modules/administration/: bot-manager.js  clearlog.js  rewards.js  setchannel.js
src/modules/database/: bot-global.js  checker.js  config-db.js  database.js  (+5 more)
src/test_doubles/: chrono.rs  directories.rs  reqwest.rs  serenity.rs  sysinfo.rs
src/test_utils/: test_doubles.rs
storage/: storage-file-example.json
test/: set-config.js  test-client.js  test-messages.js  tester.js
test/test-messages/: test-message1.json
test/test-resources/: last-version-database.db  legacy-v000-database.db  legacy-v001-database.db  legacy-v002-database.db  test-client.js  test-messages.js  test-util.js  test-youtube.js
test/unit-test/: administration.js  commands.js  database.js  fun.js  general.js  levels.js  metrics.js  music.js  user.js  warnings.js
(+37 files in other folders)
