[package]
name = "mudibot"
version = "0.8.0"
authors = ["Thomas Donovan <tdonovan@codengineer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
chrono = "0.4"
sysinfo = "0.14"
directories = "2.0"
toml = "0.5"
serde = "1.0"
cfg-if = "0.1"

[dev-dependencies]
mockall = "0.7"
once_cell = "1.3"
parking_lot = "0.10"