[package]
name = "mudibot"
version = "0.8.0"
authors = ["Thomas Donovan <tdonovan@codengineer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
chrono = "0.4"
sysinfo = "0.14"
directories = "2.0"
toml = "0.5"
serde = "1.0"
serde_json = "1.0"
cfg-if = "0.1"
fluent = "0.12"
unic-langid = "0.9"
log = "0.4"
env_logger = "0.7"
thiserror = "1.0"
rand = "0.7"
regex = "1.3"
once_cell = "1.4"

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["rustls-tls", "blocking", "json"]

[dev-dependencies]
mockall = "0.7"
parking_lot = "0.10"

[lib]
doctest = false

[[bin]]
name = "mudibot"
path = "src/main.rs"
test = false